<resources>
    <string name="app_name">TravelGuideApp</string>
    <string name="action_settings">"Settings"</string>
    <string name="title_home">"Home"</string>
    <string name="title_star">"Utilities"</string>
    <string name="title_place">"Place"</string>
    <string name="title_profile">"Profile"</string>
    <string name="reservations">"Reservations"</string>
    <string name="booking_your_hotel">"Booking your hotel"</string>
    <string name="things_to_do">"Things to do"</string>
    <string name="explore_this_places">"Explore this places"</string>
    <string name="food_and_drink">"Food and drink"</string>
    <string name="experience_culinary_culture_this_places">"Experience culinary culture this place"s</string>
    <string name="public_transport">"Public transport"</string>
    <string name="search_for_public_transport">"Search for public transport"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_select_language">Select language</string>
    <string name="select_language_vietnamese">Vietnamese</string>
    <string name="select_language_english">English</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="festival_name">festival_name</string>
    <string name="your_current_location">your current location</string>
    <string name="search_utilities_around_your_location">Search utilities around your location</string>
    <string name="city_name">city name</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_acount">Don\'t have acount?</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sing_in_with">or sing in with</string>
    <string name="user_name">User name</string>
    <string name="retype_password">Retype password</string>
    <string name="sign_up_for_an_account_to_experience_better">Sign up for an account to experience better</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="feedback">Feedback</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="sign_out">Sign out</string>
    <string name="explore_this_place">Explore this place</string>
    <string name="emergency">Emergency</string>
    <string name="police_stations_or_emergency_assistance">Police stations, or emergency assistance</string>
    <string name="hospitals_clinics_medical_support_points">Hospitals, clinics, medical support points</string>
    <string name="medical_support">Medical support</string>
    <string name="explore_around_your_current_location">Explore around your current location</string>
    <string name="shopping_mall">Shopping mall</string>
    <string name="commercial_centers_supermarkets">Commercial centers, supermarkets, …</string>
    <string name="banks_and_atms_around_here">Banks and ATMs around here</string>
    <string name="finance">Finance</string>
    <string name="explore">Explore</string>
    <string name="day_planning">Day Planning</string>
    <string name="consult_the_city_exploration_plan">Consult the city exploration plan</string>
    <string name="food_drink_and_entertainment">Food, drink and entertainment</string>
    <string name="bar_pub">Bar pub</string>
    <string name="for_night">For night</string>
    <string name="entertainment_at_night_for_a_great_night">Entertainment at night, for a great night</string>
    <string name="entertaiment">Entertaiment</string>
    <string name="entertaiment_place_water_park_gaming_center">Entertaiment place, water park, gaming center,..</string>
    <string name="convenient">Convenient</string>
    <string name="conveniente_store">Conveniente Store</string>
    <string name="conveniente_store_fast_and_convenient_24_24">Conveniente store, fast and convenient, 24/24…</string>
    <string name="gas_station">Gas station</string>
    <string name="refill_your_gas_tank">Refill your gas tank</string>
    <string name="parking">Parking</string>
    <string name="place_for_parking_your_car">Place for parking your car</string>
    <string name="repairs">Repairs</string>
    <string name="repair_your_car_or_your_motobike">Repair your car or your motobike</string>
    <string name="hotel_name">hotel name</string>
    <string name="police_stations_or_emegency_assistance_around_you">Police stations or emegency assistance around you</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="share">Share</string>
    <string name="save_place">Save place</string>
    <string name="direction">Direction</string>
    <string name="website">website</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="location_name">location name</string>
    <string name="image_location">Image</string>
    <string name="address">address</string>
    <string name="add_image">Add Image</string>
    <string name="review_summary">Review Summary</string>
    <string name="write_a_review">Write A Review</string>
    <string name="reviews">Reviews</string>
    <string name="like">Like</string>
    <string name="simple_dialog_tilte">Signin error</string>
    <string name="simple_dialog_message">Email or password is empty</string>
    <string name="sign_up_error_title">Sign up error</string>
    <string name="sign_up_error_message">Password and Retype password not equal</string>
    <string name="facebook_app_id">1528605050579836</string>
    <string name="fb_login_protocol_scheme">fb1528605050579836</string>
    <string name="total_rating">Total rating</string>
</resources>