<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SelectLanguageDialog"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_select_language"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="@color/dark_gray"
        />



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_language_group"
        >
        <RadioButton
            android:id="@+id/radio_vietnamese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_language_vietnamese"
            android:textColor="@color/dark"
            android:buttonTint="@color/dark"
            tools:ignore="UnusedAttribute" />

        <RadioButton
            android:id="@+id/radio_english"
            android:textColor="@color/dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_language_english"
            android:buttonTint="@color/dark"
            tools:ignore="UnusedAttribute"/>
     </RadioGroup>

</LinearLayout>