<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninFragment"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="@color/dark_gray"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/dark_gray">
        <EditText
            android:id="@+id/email_signin"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:background="@color/white"
            android:textColor="@color/dark"
            android:textColorHint="@color/dark_gray"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/dark_gray">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@color/white"
            android:textColorHint="@color/dark_gray"
            android:textColor="@color/dark"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in"
        android:background="@drawable/button_rounded_corner"
        android:textColor="@color/white"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_acount"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark_gray"
        />
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:background="@drawable/button_rounded_corner_color_pink"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sing_in_with"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/dark_gray"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btn_signup_google"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="20dp"
            android:layout_gravity="center"
            android:text="google"
            android:background="@drawable/button_rounded_sign_in_with_google"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            />
        <Button
            android:id="@+id/btn_signup_fb"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="20dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:text="fb"
            android:background="@drawable/button_rounded_sign_in_with_fb"
            android:textColor="@color/white"
            />
    </LinearLayout>
</LinearLayout>