<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profife_notLogin_Fragment"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="3dp">
        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/user"

            />
        <Button
            android:id="@+id/btn_profile"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:layout_margin="5dp"
            android:textColor="@color/dark_gray"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="3dp"
        />
    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/about"
        android:textAlignment="textStart"
        android:paddingStart="10dp"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:layout_margin="5dp"
        android:textColor="@color/dark_gray"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        />
    <Button
        android:id="@+id/btn_language"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/language"
        android:textAlignment="textStart"
        android:paddingStart="10dp"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:layout_margin="5dp"
        android:textColor="@color/dark_gray"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        />
    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/feedback"
        android:textAlignment="textStart"
        android:paddingStart="10dp"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:layout_margin="5dp"
        android:textColor="@color/dark_gray"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        />

    <Button
        android:id="@+id/btn_terms_of_use"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:text="@string/terms_of_use"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/dark_gray"
        android:textStyle="normal" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        />

    <Button
        android:id="@+id/btn_sign_out"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:text="@string/sign_out"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/dark_gray"
        android:visibility="gone"
        android:textStyle="normal" />
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/light_gray"-->
        <!--android:layout_marginStart="5dp"-->
        <!--android:layout_marginEnd="5dp"-->
        <!--android:layout_marginTop="3dp"-->
        <!--android:layout_marginBottom="3dp"-->
        <!--/>-->

</LinearLayout>